src/main/resources/static/css/user-dashboard-style.css
/* ... */
.user-dashboard-cards:hover {
	background: rgba(205, 171, 143, 0.2);
	border-bottom: 3px solid rgb(118, 187, 118);
	box-shadow: 0px 0px 3px 3px rgb(192, 191, 188);
	/*box-shadow: inset 40em 0em gold;*/
}

.dashboard-card-img-top {
	height: 25px !important;
	width: 20px;
	color: rgb(118, 187, 118);
}

.dashboard-card-title {
	color: rgb(118, 187, 118);
}

.card-header {
	/*border-bottom: 1px solid rgb(192, 191, 188);*/
	margin: 0 !important;
	/*color: rgb(118, 187, 118);*/
}

/*.fa-solid:not(.nav-icon, #side-menu-toggle, #side-nav-arrow, fa-regular) {
	color: rgb(118, 187, 118);
}*/

.project-count,
.item-count,
.todo-card-item-count {
	visibility: hidden;
}

.top-dangling-x-btn {
	margin-bottom: -20px;
	margin-right: -12px;
	font-size: 12pt;
	background-color: rgb(94, 92, 100);
	padding: 0.5em 0.5em 0.5em 0.5em;
	border-radius: 50%;
	z-index: 1000;
	position: relative;
	/*position: absolute;*/
	/*font-weight:bold;*/
	/*font-stretch: expanded;*/
}

.top-dangling-x-btn:hover {
	background-color: rgb(61, 56, 70);
	color: goldenrod;
}

.viewing-modal-header {
	color: rgb(186, 169, 138);
	font-size: 100%;
}

.modal-backdrop-blur {
	background: rgba(36, 31, 49, 0.2);
	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(2px);
	-webkit-backdrop-filter: blur(2px);
	width: 100%;
	margin-left: 3% !important;
	position: fixed;
	z-index: 13;
	border-top-right-radius: 0.375rem;
	border-top-left-radius: 0.375rem;
	transition: all 0.2s linear;
	opacity: 0;
	visibility: hidden;
	height: 100%;
	top: 0;
}

#viewing-modal {
	background: rgb(36, 31, 49);
	border-bottom: 3px solid goldenrod;
	width: 80%;
	margin-left: 9% !important;
	position: fixed;
	z-index: 14;
	border-top-right-radius: 0.375rem;
	border-top-left-radius: 0.375rem;
	transition: all 0.2s linear;
	height: 80vh;
	overflow: auto;
	top: 10%;

}

.viewing-modal-exit-btn {
	color: goldenrod;
	font-size: 25pt;
	cursor: pointer;
	margin-top: 0%;
	margin-right: 0%;
	z-index: 15;
	font-size: 30pt;
}

.viewing-modal-exit-btn:hover {
	color: rgb(222, 178, 67);
	text-shadow: 0px 0px 6px goldenrod;
}

.viewing-modal-exit-btn:active {
	text-shadow: 0px 5px 10px goldenrod;
}


.viewing-modal-decor {
	background-color: rgb(99, 69, 44) !important;
	background-color: rgb(218, 165, 32, 0.8) !important;
	background-color: rgb(129, 61, 156) !important;
	/*	height: 200px;*/
	padding: 200px;
	rotate: -30deg;
	border-radius: 200px;
	filter: blur(20px);

	transition: 1s ease;
	opacity: 0.4;
}

.viewing-modal-decor-container {
	position: absolute;
}

.form-container {
	border: 1px solid rgb(192, 191, 188);
	border-radius: 0.2rem !important;
}

#todo-list-modal-content,
#project-list-modal-content {
	display: none;
}

.overflow-hidden {
	overflow: hidden;
}

/*.project-modal-boxes-container {
	width: 100%;
}
.project-modal-boxes-container{
	margin-bottom: 15px;
}*/
#add-project-form {
	/*height: 0;*/
	transition: 0.2s ease-in-out;
	overflow: hidden;
	border: none;
	height: 0px;
	padding: 0;
	border: none;
	opacity: 0;
}

.add-project-form-expanded {
	height: 100% !important;
	padding: 0rem 1.5rem !important;
	border: 1px solid rgb(119, 118, 123) !important;
	opacity: 1 !important;
}

.form-floating>label {
	color: #4a4a4a !important;
}

.form-input-label {
	font-size: 10pt;
}

#add-todo-item-form {
	transition: 0.2s ease-in-out;
}

.minimalist-btn {
	font-size: 9pt !important;
	border: 1px solid rgb(119, 118, 123);
	border-radius: 0.25rem;
	color: rgb(119, 118, 123);
	transition: 0.2s ease-in-out;
	padding: 0.2rem 0.4rem 0.2rem 0.4rem;
	margin-right: 0.3rem;
	cursor: pointer;
}

.minimalist-btn-blk-bg {
	background-color: rgb(36, 31, 49)
}

.minimalist-btn:hover {
	background-color: rgba(119, 118, 123, 0.6);
	color: rgb(118, 187, 118) !important;
}

.minimalist-btn-left-rounded {
	border-top-left-radius: 50px;
	border-bottom-left-radius: 50px;
}

.minimalist-btn-right-rounded {
	border-top-right-radius: 50px;
	border-bottom-right-radius: 50px;
}

.add-project-task-btn-text {
	font-size: 10pt;
}

.add-project-task-form {
	/*display: none;*/
	/*height: 0px;*/
	transition: 0.3s ease-in-out;
	overflow: hidden;
}

.item-display-table {}

.project-modal-boxes {
	border-radius: 0.3rem;
	transition: 0.2s ease-in-out;
	overflow: hidden;
}

.project-modal-boxes-default {
	width: 270px;
	height: 350px;
	background-color: rgb(36, 31, 49);
	border: 3px solid rgb(94, 92, 100);
}

.project-modal-boxes-expanded {
	width: 100% !important;
	height: 100% !important;
	background-color: rgb(12 12 12) !important;
	border-top: 3px solid rgb(118, 187, 118) !important;
	border-bottom: 3px solid rgb(118, 187, 118) !important;
}

.project-modal-boxes-extra-info {
	border: 1px solid rgb(94, 92, 100);
}

/*.project-modal-boxes:hover {
	background: rgba(0, 0, 0, 0.2);
	pointer-events: auto;
}*/

.project-modal-boxes-inner {
	border: 1px solid rgb(61, 56, 70);
	/*background-color: rgb(32, 27, 45);*/
	/*box-shadow: 0px 0px 15px 1px rgba(61, 56, 70,0.5);*/
	border-radius: 0.3rem;
	transition: 0.2s ease-in-out;
	overflow: hidden;

	border-radius: 0.75rem;
	box-shadow: 1px 3px 0 rgb(61, 56, 70), 0 1px 2px -1px rgb(61, 56, 70);
}

.test {
	border: 1px solid rgb(61, 56, 70);
	border-radius: 0.75rem;
	box-shadow: 1px 3px 0 rgb(61, 56, 70), 0 1px 2px -1px rgb(61, 56, 70);
}

.project-modal-inner-content-container {}

.task-status {
	width: 57%;
	font-size: 10pt;
}

.task-duration {
	width: 41%;
	font-size: 10pt;
}


.modal-project-task-container, .dashboard-card-project-task-container {
	/*height: 200px;
	overflow: auto;*/
	border: 1px solid rgb(61, 56, 70);
	border-radius: 0.5rem;
	color: rgb(205, 171, 143);
}

.modal-project-task-container-inner, .dashboard-card-project-task-container-inner {
	overflow: auto;
	height: 200px;
}
.dashboard-card-project-task-container-inner{
	height: 230px;
}

.modal-project-task-items, .dashboard-card-project-task-items {
	color: rgb(222, 221, 218);
	background-color: rgb(61, 56, 70);
	border-radius: 0.5rem;
}
/* ... */

